<resources>
    <string name="app_name">ScoreBoard</string>
    <string name="team1">Team A</string>
    <string name="team2">Team B</string>
    <string name="score1">0</string>
    <string name="score2">0</string>
    <string name="button1">+1</string>
    <string name="button2">+1</string>
    <string name="button3">+2</string>
    <string name="button4">+2</string>
    <string name="button5">+3</string>
    <string name="button6" translatable="false">+3</string>
    <string name="button">Button</string>
    <string name="undo">undo</string>
    <string name="reset">reset</string>
</resources>
